# dlt-advanced-course

./: README.md  jaffle_shop_pipeline.py  prod_jaffle_shop_pipeline.py  pyproject.toml  requirements_github_action.txt
.github/workflows/: run_jaffle_shop_workflow.yml
dlt_deploy_env/: pyvenv.cfg
