[project]
name = "dlt-advanced-course"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"

[tool.poetry.dependencies]
dlt = {extras = ["cli"], version = "^1.11.0"}
gitpython = "^3.1.44"
pyyaml = "^6.0.2"
jinja2 = "^3.1.6"
typer = "^0.15.4"

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
